2006-10-18  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (change_redo_label, change_redo_label):
	Translate labels.

2006-10-17  Don Allingham  <don@gramps-project.org>
	* src/plugins/Desbrowser.py: fix callback parameter list

2006-10-16  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditPerson.py (_given_focus_out_event): Convert to
	unicode before guessing gender.

2006-10-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_WriteGedcom.py: fix bad function call
	* src/glade/gramps.glade: consistent place name

2006-10-15  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/FanChart.py: Fix name display for gen 6 and 7

2006-10-11  Alex Roitman  <shura@gramps-project.org>
	* RELEASE: version 2.2.0rc1 is released.
	* configure.in: Bump up the version number.

2006-10-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/IndivComplete.py (write_person): Catch missing image
	files.

2006-10-11  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDisplay.py (help): Rename gramps-manual to gramps.
	* src/Filters/_FilterComboBox.py (set): Force unicode.

2006-10-11  Brian Matherly  <brian@gramps-project.org>
	* src/Mime/_WinMime.py: potential fix for #446

2006-10-10  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Update version number.
	* NEWS: Update.
	* src/plugins/ExportVCalendar.py (get_option_box): Use custom filters.
	* src/plugins/ExportVCard.py (get_option_box): Use custom filters.
	* src/plugins/WriteFtree.py (get_option_box): Use custom filters.
	* src/plugins/WriteGeneWeb.py (get_option_box): Use custom filters.
	* src/Selectors/_BaseSelector.py: Import gettext.

2006-10-10  Don Allingham  <don@gramps-project.org>
	* src/gramps_main.py: use pngs for windows

2006-10-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_WriteXML.py (strip_dict): Do not strip tab, LF, CR.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_10,
	gramps_upgrade_11): Properly use TXN.	
